--- a/src/Components/About/AboutSection/About.scss
+++ b/src/Components/About/AboutSection/About.scss
@@ -1,5 +1,5 @@
-@import "../../Styles/variables.scss";
-@import "../../Styles/mixin.scss";
+@import "../../../Styles/variables.scss";
+@import "../../../Styles/mixin.scss";
 .about-page {
     .content {
         padding-left: 1rem;
