--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -207,7 +207,7 @@ html {
 .about-page,
 .why-us,
 .board,
-.poliklinik,
+.polyclinic,
 .our-partners,
 .human-resources,
 .kvkk,
@@ -220,7 +220,7 @@ html {
   .about-page,
   .why-us,
   .board,
-  .poliklinik,
+  .polyclinic,
   .our-partners,
   .human-resources,
   .kvkk,
@@ -235,8 +235,8 @@ html {
 .why-us h3,
 .board h2,
 .board h3,
-.poliklinik h2,
-.poliklinik h3,
+.polyclinic h2,
+.polyclinic h3,
 .our-partners h2,
 .our-partners h3,
 .human-resources h2,
@@ -257,8 +257,8 @@ html {
   .why-us h3,
   .board h2,
   .board h3,
-  .poliklinik h2,
-  .poliklinik h3,
+  .polyclinic h2,
+  .polyclinic h3,
   .our-partners h2,
   .our-partners h3,
   .human-resources h2,
@@ -274,7 +274,7 @@ html {
 .about-page .sidebar,
 .why-us .sidebar,
 .board .sidebar,
-.poliklinik .sidebar,
+.polyclinic .sidebar,
 .our-partners .sidebar,
 .human-resources .sidebar,
 .kvkk .sidebar,
@@ -292,7 +292,7 @@ html {
 .about-page .sidebar ul li,
 .why-us .sidebar ul li,
 .board .sidebar ul li,
-.poliklinik .sidebar ul li,
+.polyclinic .sidebar ul li,
 .our-partners .sidebar ul li,
 .human-resources .sidebar ul li,
 .kvkk .sidebar ul li,
@@ -303,7 +303,7 @@ html {
 .about-page .sidebar ul li a,
 .why-us .sidebar ul li a,
 .board .sidebar ul li a,
-.poliklinik .sidebar ul li a,
+.polyclinic .sidebar ul li a,
 .our-partners .sidebar ul li a,
 .human-resources .sidebar ul li a,
 .kvkk .sidebar ul li a,
@@ -316,7 +316,7 @@ html {
 .about-page .sidebar ul li a.active,
 .why-us .sidebar ul li a.active,
 .board .sidebar ul li a.active,
-.poliklinik .sidebar ul li a.active,
+.polyclinic .sidebar ul li a.active,
 .our-partners .sidebar ul li a.active,
 .human-resources .sidebar ul li a.active,
 .kvkk .sidebar ul li a.active,
@@ -328,7 +328,7 @@ html {
   .about-page .sidebar ul li a,
   .why-us .sidebar ul li a,
   .board .sidebar ul li a,
-  .poliklinik .sidebar ul li a,
+  .polyclinic .sidebar ul li a,
   .our-partners .sidebar ul li a,
   .human-resources .sidebar ul li a,
   .kvkk .sidebar ul li a,
