--- a/src/Styles/mixin.scss
+++ b/src/Styles/mixin.scss
@@ -339,3 +339,22 @@
         }
     }
 }
+
+@mixin tagcloud {
+    a {
+        display: inline-block;
+        background: var(--color-light-blue);
+        color: var(--color-white);
+        padding: 0.7rem 1.5rem;
+        border: none;
+        font-weight: 500;
+        font-size: 0.9rem;
+        margin-top: 0.8rem;
+        margin-right: 5px;
+        transition: 0.6s all;
+
+        &:hover {
+            background-color: var(--color-gray-text);
+        }
+    }
+}
