--- a/src/Components/Home/HomeAppoinment/FormArea/FormArea.scss
+++ b/src/Components/Home/HomeAppoinment/FormArea/FormArea.scss
@@ -19,10 +19,13 @@
         button {
             @include button;
             margin-top: 1rem;
-           
+
             @include breakpoint(lg) {
                 font-size: 1rem;
             }
         }
+    }
+    .Toastify__toast-container {
+        position: absolute;
     }
 }
