--- a/src/Styles/index.css
+++ b/src/Styles/index.css
@@ -336,4 +336,16 @@ html {
     font-size: 1rem;
   }
 }
+
+.error {
+  color: red;
+}
+
+.react-datepicker-popper {
+  z-index: 999 !important;
+}
+
+.react-datepicker__navigation {
+  display: none !important;
+}
 /*# sourceMappingURL=index.css.map */
