--- a/src/Components/About/AboutSection/About.scss
+++ b/src/Components/About/AboutSection/About.scss
@@ -59,6 +59,9 @@
             @include breakpoint(xl) {
                 max-width: 40rem;
             }
+            @include breakpoint(md){
+                max-width: 100%;
+            }
         }
     }
 
