--- a/src/Components/Doctors/DoctorDetail/DoctorDetail.scss
+++ b/src/Components/Doctors/DoctorDetail/DoctorDetail.scss
@@ -15,7 +15,7 @@
         @include h3;
         margin-bottom: 1.5rem;
     }
-    .img-wrapper {
+    .img-wrapper-gallery {
         cursor: pointer;
         position: relative;
 
