--- a/src/Components/Home/HomeAbout/HomeAbout.css
+++ b/src/Components/Home/HomeAbout/HomeAbout.css
@@ -1,14 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 :root {
-  --poppins: "Poppins", sans-serif;
-  --black: #222222;
-  --white: #fff;
-  --color-bg: #1f1f38;
-  --color-bg-green: #31b675;
-  --color-primary: #4db5ff;
-  --color-primary-variant: rgba(77, 181, 255, 0.4);
-  --color-light: rgba(255, 255, 255, 0.6);
-  --transition: all 400ms ease;
+  --color-white: #fff;
+  --color-light-blue: #009fe3;
+  --color-black: #000;
+  --color-gray: #f6f6f6;
+  --color-blue: #eceff1;
+  --color-gray-text: #757575;
+  --color-gray-2: #737575;
+  --color-blue-2: #bbdefb;
+  --color-blue-3: #0d47a1;
+  --color-purple: #7e57c2;
 }
 
 :root {
@@ -20,6 +22,8 @@
   --color-gray-text: #757575;
   --color-gray-2: #737575;
   --color-blue-2: #bbdefb;
+  --color-blue-3: #0d47a1;
+  --color-purple: #7e57c2;
 }
 
 .about-us {
@@ -51,7 +55,7 @@
   font-weight: 700;
 }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
   .about-us h6 {
     font-size: 1rem;
   }
@@ -63,7 +67,7 @@
   font-size: 2.5rem;
 }
 
-@media screen and (max-width: 1200px) {
+@media (max-width: 1200px) {
   .about-us h3 {
     font-size: 1.5rem;
   }
